public/css/landingpage.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
}

/* ANTI-ESTOURO GLOBAL */
@media (max-width: 1024px) {
    .slider-item {
        width: 60vw;
        /* Em telas menores, aumenta o slide para ficar melhor visualmente */
    }
}

/*todo: Corta qualquer transbordo horizontal invisível */
html, .tudolanding {
    width: 100%;
    margin: 0;
    padding: 0;
    overflow-x: auto;
    background: linear-gradient(to bottom, #5B162D 25%, #000 78%);
}

/* HERO SECTION */
.hero-section {
    align-items: center;
    align-self: stretch;

    display: flex;
    height: 100vh;
    padding: 0 clamp(1.5rem, 5vw, 5rem);
    min-height: 92vh;
    width: 100%;
}

.elementos-hs {
    align-items: center;
    display: flex;
    flex: 1 0 0;
    gap: 4.25rem;
    justify-content: center;
    /* min-width: max-content; */
    width: 100%;
}

.metade-texto {
    align-items: center;
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 3rem;
    height: 47.05vh;
    justify-content: center;
    min-width: 17.5rem;
}

.tudolanding {
    align-items: flex-start;
    background-attachment: fixed;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
}

.tdtitulo{
    line-height: 6rem;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.titulo2 {
    display: flex;
    justify-content: center;
    gap: 1rem;
    align-items: baseline;

}

.h1lan {
    font-family: "Anton", sans-serif;
    color: #FEECE8;
    font-size: 7rem;
}

.h11lan {
    font-family: "Anton", sans-serif;
    color: #FEECE8;
    font-size: 7rem;
    align-self: center;
    padding-left: 4rem;
}

.h3lan {
    font-family: "Anton", sans-serif;
    font-size: 3rem;
    color: #FEECE8;
}

.texto_hs {

    /*todo: layout da caixa de texto */
    align-self: stretch;
    display: flex;
    flex-direction: column;
    flex: 1 0 0;
    justify-content: center;

    /*todo: tipografia */
    color: #FFF;
    font-family: Montserrat;
    font-size: clamp(1rem, 1.5vw, 2rem);
    font-style: normal;
    font-weight: 600;
    line-height: 2.5rem;
    text-align: center;
}

.botão {

    /*todo: layout da caixa do botão */
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 0.625rem;
    justify-content: center;
    padding: 0.625rem;
    width: 20vw;

    /*todo: aparência da caixa */
    background-color: #FFA96B;
    border-radius: 2.31vw;
    border: none;

    /*todo: tipografia */
    color: #000;
    font-family: Inter;
    font-size: clamp(1.2rem, 1.75Svw, 2.5rem);
    font-style: normal;
    font-weight: 600;
    line-height: 1.2;
    text-align: center;
}

/*todo: box que contem a imangem logo  */
.metade-logo {
    align-items: center;
    display: flex;
    flex: 1;
    height: 50.55vh;
    image-rendering: auto;
    justify-content: center;
    padding: 0.625rem;
    transform: translateZ(0);
    min-width: 17.5rem;
}

/*todo: imagem logo */
#logopolvo{
    width: 100%;
    height: 100%;
    object-fit: contain;
}

/* CARROUSSEL */
/*! a box do carroussel como um todo */
.carroussel {
    background-color: #FFF;
    overflow: hidden;
    padding: 1.5625rem clamp(1.5rem, 5vw, 5rem);
    position: relative;
    width: 100%;
}

.titulo-total1{
    align-items: center;
    display: flex;
    gap: 0.5rem;
    justify-content: center;
    margin: 0 0 1rem 0;

}
/* ! titulo do carroussel-texto*/
.titulo_carroussel {
    color: #5B162D;
    font-family: Montserrat;
    font-size: clamp(1.2rem, 2.96vw, 2.5rem);
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    margin: 2vh 0 3vh 0;
    padding: 1rem 0 0 0;
}

/* ! titulo do carroussel-imagem*/
.titulo_carroussel_img{
    width: 10%;
}

/*! contem as divs onde estam as imagens */
.slider-conteudo {
    display: flex;
    overflow: hidden;
}

/*! onde está as imagens */
.slider-item {
  min-width: 30%;
}

/*! as imagens */
.slider-item img {
    border-radius: 4.16vw;
    height: 35vh;
    object-fit: cover;
    transition: transform 0.3s;
    width: 25vw;
}

/*! as setas do carroussel */
.nav-arrow {
    position: absolute;
    top: 50%;
    transform: translateY(+30%);
    background-color: rgba(225, 225, 225, 0, 9);
    color: black;
    width: 3vw;
    height: 8vh;
    border-radius: 2vw;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    font-size: 25px;
    transition: 0.3s;
    z-index: 10;
}

/*! efeito das setas quando o cursor passa em cima */
.nav-arrow:hover {
    background-color: #FFA96B;
    color: white;
}

.seta_esquerda {left: 0.9vw;}
.seta_direita {right: 0.9vw;}

/*! area onde fica as bolinhas */
/* .radio-auto {
    align-items: center;
    display: flex;
    gap: 0.5vw;
    height: 2vh;
    justify-content: center;
    margin: 1vw 0;
    width: 100vw;
} */

/*! bolinhas */
/* .radio-label {
    border: 0.10vw solid white;
    padding: 0.4vw;
    border-radius: 50%;
    background-color: #ccc;
    cursor: pointer;
    transition: background-color 0.3s;
} */

/*! efeito das bolinhas quando o cursor passa em cima */
/* .radio-label.active {
    background-color: #FFA96B;
} */

/* MOSAICO */
.mosaico {
    align-items: flex-start;
    align-self: stretch;
    background-color: #FFF;
    display: flex;
    flex-direction: column;
    height: auto;
    min-height: 100%;
    padding: 1.5625rem clamp(1.5rem, 5vw, 5rem);
    width: 100%;
}

/*? contem as imagens e o texto */
.titulo-total2{
    align-items: center;
    display: flex;
    gap: 0.5rem;
    justify-content: center;
    margin-bottom: 2rem;
}

/*? titulo do mosaico-texto */
.titulo-mosaico {
    color: #5B162D;
    font-family: Montserrat;
    font-size: clamp(1.2rem, 2.96vw, 2.5rem);
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}

/* ? titulo do mosaico-imagem*/
.titulo_mosaico_img{
    width: 10%;
}

/*? contem o post grande e os posts pequenos */
.elementos-post {
    align-items: center;
    display: flex;
    flex-shrink: 0;
    gap: 5rem;
    height: auto;
    justify-content: center;
    width: 100%;
}

/*? coluna da esquerda: conteiner da imagem */
.postGrande {
    /*? layout */
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    height: 60vh;
    image-rendering: auto;

    /*? aparencia */
    background-color: #FFF;
    border-radius: 2.31vw;
    box-shadow: -15px 15px 10px 0 rgba(0, 0, 0, 0.20);
}

/*? imagem do .postGrande */
.postGrande img {
    width: 100%;
    height: 100%;
    border-radius: 2.31vw;
}

/*? coluna da direita: container dos 3 posts pequenos */
.postsPquenos {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    height: auto;
    justify-content: center;
    width: 50%;
}

/*? post 1: contem imagem e texto */
.p1 {
    align-items: center;
    align-self: stretch;
    background-color: #FFF;
    border-radius: 1.5vw;
    display: flex;
    flex-direction: row;
    flex-shrink: 0;
    gap: 0.9375rem;
    height: 17.87vh;
}

/*? imagem 1 */
.i1 {
    /*? layout */
    display: flex;
    flex-shrink: 0;
    height: 18.5vh;
    justify-content: center;
    transform: translateZ(0);
    object-fit: cover;
    width: 36%;

    /*? aparencia */
    border-radius: 1.5vw;
    box-shadow: -10px 10px 10px 0 rgba(0, 0, 0, 0.20);
}

/*? texto 1 */
.t1 {
    /*? layout */
    display: flex;
    flex: 1;
    flex-direction: column;
    height: auto;
    justify-content: center;
    width: 55%;

    /*? tipografia */
    color: #000;
    font-family: Montserrat;
    font-size: clamp(0.9rem, 1.5vw, 1.3rem);
    font-style: normal;
    font-weight: 600;
    line-height: 1.4;
    text-align: justify;
}

/*? post 2: contem imagem e texto */
.p2 {
    align-items: center;
    align-self: stretch;
    background-color: #FFF;
    border-radius: 1.5vw;
    display: flex;
    flex-direction: row;
    flex-shrink: 0;
    gap: 0.9375rem;
    height: 17.87vh;
}

.teste{
    width: 200px;
}

/*? imagem 2 */
.i2 {
    /*? layout */
    display: flex;
    flex-shrink: 0;
    height: 18.5vh;
    justify-content: center;
    transform: translateZ(0);
    width: 36%;

    /*? aparencia */
    border-radius: 1.5vw;
    box-shadow: -10px 10px 10px 0 rgba(0, 0, 0, 0.20);
}

/*? texto 2 */
.t2 {
    /*? layout */
    display: flex;
    flex: 1;
    flex-direction: column;
    height: auto;
    justify-self: center;
    width: 55%;

    /*? tipografia */
    color: #000;
    font-family: Montserrat;
    font-size: clamp(0.9rem, 1.5vw, 1.3rem);
    font-style: normal;
    font-weight: 600;
    line-height: 1.4;
    text-align: justify;
}

/*? post 3: contem imagem e texto */
.p3 {
    align-items: center;
    align-self: stretch;
    background-color: #FFF;
    border-radius: 1.5vw;
    display: flex;
    flex-direction: row;
    flex-shrink: 0;
    gap: 0.9375rem;
    height: 17.87vh;
}

/*? imagem 3 */
.i3 {
    /*? layout */
    display: flex;
    flex-shrink: 0;
    height: 18.5vh;
    justify-content: center;
    transform: translateZ(0);
    width: 36%;

    /*? aparencia */
    border-radius: 1.5vw;
    box-shadow: -10px 10px 10px 0 rgba(0, 0, 0, 0.20);
}

/*? texto 3 */
.t3 {
    /*? layout */
    display: flex;
    flex: 1;
    flex-direction: column;
    height: auto;
    justify-content: center;
    width: 55%;

    /*? tipografia */
    color: #000;
    font-family: Montserrat;
    font-size: clamp(0.9rem, 1.5vw, 1.3rem);
    font-style: normal;
    font-weight: 600;
    line-height: 1.4;
    text-align: justify;
}

